--- a/Week 4/4.1/DOM.html
+++ b/Week 4/4.1/DOM.html
@@ -1,12 +1,46 @@
+
+<!-- code uses DOM for dynamic nature -->
+<!-- <html>
+    <body>
+        <script>
+            function sum()
+            {
+                // Sum Server: https://sum-server.100xdevs.com/sum?a=8&b=5
+
+                const element=document.getElementById("finalSum")
+                const a =document.getElementById("first").value
+                const b=document.getElementById("second").value
+                element.innerHTML=("Sum is "+ (parseInt(a)+parseInt(b)))
+            }
+        </script>
+        <input id= "first" type="text", placeholder="first number">
+        <br></br>
+        <input id ="second" type="text", placeholder="second number">
+        <br> </br>
+        <button onclick="sum()">calculate sum</button>
+        <br></br>
+        <div id="finalSum"></div>
+    </body>
+</html> -->
+<!-- using backend server for sun -->
 <html>
     <body>
         <script>
             function sum()
             {
+                // Sum Server: https://sum-server.100xdevs.com/sum?a=8&b=5
+
                 const element=document.getElementById("finalSum")
                 const a =document.getElementById("first").value
                 const b=document.getElementById("second").value
-                element.innerHTML=("Sum is "+ (parseInt(a)+parseInt(b)))
+                //ugly way
+                fetch("https://sum-server.100xdevs.com/sum?a="+a+"&b="+b).then(function(res){
+                    //console.log(res)
+                    res.text().then(function(resp){
+                        //console.log(resp)
+                        element.innerHTML=resp;
+                    })
+                })
             }
         </script>
         <input id= "first" type="text", placeholder="first number">
